snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.module.sha1
c8ea0248e4a1665c864d45510d897238e46c75d1